# lodash-rs

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISH_CHECKLIST.md  README.md  publish.toml  test_standalone.rs
.github/workflows/: ci.yml  publish.yml
benches/: collection_benchmarks.rs
docs/: API.md
examples/: async_usage.rs  basic_usage.rs  minimal_test.rs  parallel_usage.rs  simple_test.rs  standalone_test.rs
scripts/: publish.sh
src/: lib.rs
src/chain/: builder.rs  executor.rs  mod.rs
src/collection/: async_support.rs  iteration.rs  mod.rs  operation.rs  query.rs  transform.rs
src/extensions/: mod.rs  parallel.rs  wasm.rs
src/utils/: async_support.rs  error.rs  mod.rs  type_conv.rs
tests/: basic_tests.rs
