[package]
name = "rust-lodash"
version = "0.1.0"
edition = "2021"
authors = ["royalwang <royalwang@example.com>"]
description = "A high-performance, type-safe Rust implementation of Lodash collection methods with zero-cost abstractions"
license = "MIT"
repository = "https://github.com/royalwang/rust-lodash"
homepage = "https://github.com/royalwang/rust-lodash"
documentation = "https://docs.rs/rust-lodash"
readme = "README.md"
keywords = [
    "lodash", 
    "collections", 
    "functional", 
    "iterator", 
    "utility"
]
categories = [
    "data-structures", 
    "algorithms", 
    "development-tools::testing",
    "web-programming::http-client"
]
rust-version = "1.70"

[dependencies]
# Core utilities
rand = "0.8"

# Async support (optional)
futures = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"], optional = true }

# Parallel processing (optional)
rayon = { version = "1.7", optional = true }

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
# Testing
criterion = "0.5"
proptest = "1.0"
tokio-test = "0.4"

[features]
default = []
async = ["futures", "tokio"]
parallel = ["rayon"]
serialize = ["serde"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

# Publishing configuration
[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

# Benchmark configuration
[[bench]]
name = "collection_benchmarks"
harness = false

[lib]
name = "rust_lodash"
path = "src/lib.rs"
doc = true
